--- a/index.html
+++ b/index.html
@@ -9,54 +9,28 @@
     <title>Gustavo Henrique</title>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary" style="background-color: #737373;">
-        <div class="container-fluid justify-content-center">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav mx-auto">
-              <li class="nav-item">
-                <a class="nav-link link-light" aria-current="page" href="index.html">Início</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link link-light" href="#">Contato</a>
-              </li>
-              <li class="nav-item dropdown">
-                <a class="nav-link link-light dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                  Projetos
-                </a>
-                <ul class="dropdown-menu">
-                  <li><a class="dropdown-item" href="#">Projeto #1</a></li>
-                  <li><a class="dropdown-item" href="#">Projeto #2</a></li>
-                  <li><a class="dropdown-item" href="#">Projeto #3</a></li>
-                </ul>
-              </li>
-            </ul>
-          </div>
-        </div>
-    </nav>
 
-    <div class="container-lg">
-      <div class="d-flex">
-        <div class="p-2 fs-1 w-100">Analista de Sistemas <br> Gustavo Henrique</div>
-        <div class="p-2"><img src="./public/assets/foto_gustavo_monocromatica.png" class="img-fluid w-50" alt="Foto do Gustavo Sorrindo"></div>
+    <div class="container d-flex flex-column justify-content-center min-vh-100">
+
+      <div class="row w-100">
+        <div class="d-flex align-items-center justify-content-center col-xl-5 col-sm-11 offset-1">
+          <div class="fs-1 w-100 pt-5 my-3 ">Analista de Sistemas <br> Gustavo Henrique</div>
+        </div>
+        <div class="col-xl-5 col-sm-11 offset-1">
+          <div class="d-flex align-items-center"><img src="./public/assets/foto_gustavo_monocromatica.png" class="img-fluid w-50" alt="Foto do Gustavo Sorrindo"></div>
+        </div>
       </div>
 
-      <div class="row">
-        <div class="col-lg-4">
-          <p>
-            <a class="btn btn-secondary" href="https://www.linkedin.com/in/gustavohenriquems/" target=”_blank”>Linkedin</a>  
-            <a class="btn btn-secondary" href="https://github.com/gustavohms" target=”_blank”>GitHub</a>
-          </p>
-        </div>
-
+       <div class="row w-100 mt-4">
+          <div class="col-xl-6 col-sm-11 offset-1">
+            <p>
+              <a class="me-2 btn btn-secondary" href="https://www.linkedin.com/in/gustavohenriquems/" target=”_blank”>Linkedin</a>  
+              <a class="btn btn-secondary" href="https://github.com/gustavohms" target=”_blank”>GitHub</a>
+            </p>
+       </div>
+      </div>
 
     </div>
-
-
-
-     <!-- <img src="./assets/foto_gustavo_monocromatica.png"> -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
   </body>
