Correção de div com nome e foto

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   </head>
   <body>
     <main>
-      <section class="py-1 text-center container">
+      <section class="text-center container">
+        <div class="row featurette py-4">
             <div class="d-flex align-items-center justify-content-center col-xl-5 col-lg-5 col-md-5 col-sm-5">
               <div class="fs-1 w-100 pt-5 my-3 ">
                 <h2 class="display-5">Gustavo Henrique</h2>
@@ -34,7 +35,7 @@
                 </p>
             </div>
 
-            
+        </div>
       </section>
 
       <section>
